HEEP-1012 added another div to prevent horizontal scrolling

--- a/FrontEnd/Electron/src/assets/css/index.css
+++ b/FrontEnd/Electron/src/assets/css/index.css
@@ -3,7 +3,7 @@
   padding: 0px;
 }
 
-html, body {
+body {
   margin: 0;
   height: 100%;
   overflow: hidden;
